--- a/test1.html
+++ b/test1.html
@@ -17,24 +17,17 @@
     <script src="./js1/jquery.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" />
     <div class="check_st1">
-        <input style="border: 0ch;background-color:#000;color: rgb(255, 255, 255);"  type="button" value="返回" onclick="goBack()"><div class="btn"></div>
+        <input style="border: 0ch;background-color:#000;color: rgb(255, 255, 255);"  type="button" value="返回" onclick="goBack()"><div class="btn">
+        </div>
     </div>
     <div class="manualItem">
         <div class="slide1 list">
             <ul class="slide1">
-                <li class="slide1-item"><img src="./1/chenruyi/5.gif" alt="">
-                                        <h3></h3>
-                                    </li>
-                                    <li class="slide1-item"><img src="./1/chenruyi/第4页.png" alt="">
-                                        <h3></h3>
-                                    </li>
-                                    <li class="slide1-item"><img src="./1/chenruyi/第3页.png" alt="">
-                                        <h3></h3>
-                                    </li>
-                                    <li class="slide1-item"><img src="./1/chenruyi/第2页.png" alt="">
-                                        <h3></h3>
-                                    </li>
-                                    <li class="slide1-item"><img src="./1/chenruyi/第1页.png" alt="">
+                <li class="slide1-item"><img src="./liujing/1.gif" alt=""><h3></h3></li>
+                <li class="slide1-item"><img src="./liujing/第四页.jpg" alt=""><h3></h3></li>
+                <li class="slide1-item"><img src="./liujing/第三页.jpg" alt=""><h3></h3></li>
+                <li class="slide1-item"><img src="./liujing/第二页.jpg" alt=""><h3></h3></li>
+                <li class="slide1-item"><img src="./liujing/第一页.jpg" alt=""><h3></h3></li>
             </ul>
             </ul>
         </div>
