--- a/test10.html
+++ b/test10.html
@@ -22,21 +22,11 @@
     <div class="manualItem">
         <div class="slide10 list">
             <ul class="slide10">
-                <li class="slide10-item"><img src="./1/mengying/5.gif" alt="">
-                    <h3></h3>
-                </li>
-                <li class="slide10-item"><img src="./1/mengying/4.jpg" alt="">
-                    <h3></h3>
-                </li>
-                <li class="slide10-item"><img src="./1/mengying/3.jpg" alt="">
-                    <h3></h3>
-                </li>
-                <li class="slide10-item"><img src="./1/mengying/2.jpg" alt="">
-                    <h3></h3>
-                </li>
-                <li class="slide10-item"><img src="./1/mengying/1.jpg" alt="">
-                    <h3></h3>
-                </li>
+                <li class="slide10-item"><img src="./fang/1.gif" alt=""><h3></h3></li>
+                <li class="slide10-item"><img src="./fang/4.jpg" alt=""><h3></h3></li>
+                <li class="slide10-item"><img src="./fang/3.jpg" alt=""><h3></h3></li>
+                <li class="slide10-item"><img src="./fang/2.jpg" alt=""><h3></h3></li>
+                <li class="slide10-item"><img src="./fang/1.jpg" alt=""><h3></h3></li>
             </ul>
         </div>
     </div>
