--- a/test2.html
+++ b/test2.html
@@ -22,21 +22,11 @@
     <div class="manualItem">
         <div class="slide2 list">
             <ul class="slide2">
-                <li class="slide2-item"><img src="./1/daiyuting/5.gif" alt="">
-                    <h3></h3>
-                </li>
-                <li class="slide2-item"><img src="./1/daiyuting/4.jpg" alt="">
-                    <h3></h3>
-                </li>
-                <li class="slide2-item"><img src="./1/daiyuting/3.jpg" alt="">
-                    <h3></h3>
-                </li>
-                <li class="slide2-item"><img src="./1/daiyuting/2.jpg" alt="">
-                    <h3></h3>
-                </li>
-                <li class="slide2-item"><img src="./1/daiyuting/1.jpg" alt="">
-                    <h3></h3>
-                </li>
+                <li class="slide2-item"><img src="./lijian/1.gif" alt=""><h3></h3></li>
+                <li class="slide2-item"><img src="./lijian/4.jpg" alt=""><h3></h3></li>
+                <li class="slide2-item"><img src="./lijian/3.jpg" alt=""><h3></h3></li>
+                <li class="slide2-item"><img src="./lijian/2.jpg" alt=""><h3></h3></li>
+                <li class="slide2-item"><img src="./lijian/1.jpg" alt=""><h3></h3></li>
             </ul>
         </div>
     </div>
