--- a/test3.html
+++ b/test3.html
@@ -22,21 +22,11 @@
     <div class="manualItem">
         <div class="slide3 list">
             <ul class="slide3">
-                <li class="slide3-item"><img src="./1/yangmengjie/5.gif" alt="">
-                    <h3></h3>
-                </li>
-                <li class="slide3-item"><img src="./1/yangmengjie/4.详情页.jpg" alt="">
-                    <h3></h3>
-                </li>
-                <li class="slide3-item"><img src="./1/yangmengjie/3.详情页.jpg" alt="">
-                    <h3></h3>
-                </li>
-                <li class="slide3-item"><img src="./1/yangmengjie/2.详情页.jpg" alt="">
-                    <h3></h3>
-                </li>
-                <li class="slide3-item"><img src="./1/yangmengjie/1.详情页.jpg" alt="">
-                    <h3></h3>
-                </li>
+                <li class="slide3-item"><img src="./cai/1.gif" alt=""><h3></h3></li>
+                <li class="slide3-item"><img src="./cai/4.jpg" alt=""><h3></h3></li>
+                <li class="slide3-item"><img src="./cai/3.jpg" alt=""><h3></h3></li>
+                <li class="slide3-item"><img src="./cai/2.jpg" alt=""><h3></h3></li>
+                <li class="slide3-item"><img src="./cai/1.jpg" alt=""><h3></h3></li>
             </ul>
         </div>
     </div>
