--- a/test4.html
+++ b/test4.html
@@ -22,21 +22,11 @@
     <div class="manualItem">
         <div class="slide4 list">
             <ul class="slide4">
-                <li class="slide4-item"><img src="./1/sunyiyang/5.gif" alt="">
-                    <h3></h3>
-                </li>
-                <li class="slide4-item"><img src="./1/sunyiyang/4.jpg" alt="">
-                    <h3></h3>
-                </li>
-                <li class="slide4-item"><img src="./1/sunyiyang/3.jpg" alt="">
-                    <h3></h3>
-                </li>
-                <li class="slide4-item"><img src="./1/sunyiyang/2.jpg" alt="">
-                    <h3></h3>
-                </li>
-                <li class="slide4-item"><img src="./1/sunyiyang/1.png" alt="">
-                    <h3></h3>
-                </li>
+                <li class="slide4-item"><img src="./yang/杨依坤推送/1.gif" alt=""><h3></h3></li>
+                <li class="slide4-item"><img src="./yang/杨依坤推送/41.png" alt=""><h3></h3></li>
+                <li class="slide4-item"><img src="./yang/杨依坤推送/3.png" alt=""><h3></h3></li>
+                <li class="slide4-item"><img src="./yang/杨依坤推送/2.png" alt=""><h3></h3></li>
+                <li class="slide4-item"><img src="./yang/杨依坤推送/1.png" alt=""><h3></h3></li>
             </ul>
         </div>
     </div>
