--- a/test5.html
+++ b/test5.html
@@ -22,21 +22,11 @@
     <div class="manualItem">
         <div class="slide5 list">
             <ul class="slide5">
-                <li class="slide5-item"><img src="./1/zhangjingjing/5.gif" alt="">
-                    <h3></h3>
-                </li>
-                <li class="slide5-item"><img src="./1/zhangjingjing/介绍图04.jpg" alt="">
-                    <h3></h3>
-                </li>
-                <li class="slide5-item"><img src="./1/zhangjingjing/介绍图03.jpg" alt="">
-                    <h3></h3>
-                </li>
-                <li class="slide5-item"><img src="./1/zhangjingjing/介绍图02.jpg" alt="">
-                    <h3></h3>
-                </li>
-                <li class="slide5-item"><img src="./1/zhangjingjing/介绍图01.jpg" alt="">
-                    <h3></h3>
-                </li>
+                <li class="slide5-item"><img src="./img1/niu6.gif" alt=""></li>
+                <li class="slide5-item"><img src="./img1/niu4.jpg" alt=""></li>
+                <li class="slide5-item"><img src="./img1/niu2.jpg" alt=""></li>
+                <li class="slide5-item"><img src="./img1/2.jpg" alt=""></li>
+                <li class="slide5-item"><img src="./img1/1.jpg" alt=""></li>
             </ul>
         </div>
     </div>
