--- a/test7.html
+++ b/test7.html
@@ -22,21 +22,11 @@
     <div class="manualItem">
         <div class="slide7 list">
             <ul class="slide7">
-                <li class="slide7-item"><img src="./1/xuketong/5.gif" alt="">
-                    <h3></h3>
-                </li>
-                <li class="slide7-item"><img src="./1/xuketong/4.png" alt="">
-                    <h3></h3>
-                </li>
-                <li class="slide7-item"><img src="./1/xuketong/3.png" alt="">
-                    <h3></h3>
-                </li>
-                <li class="slide7-item"><img src="./1/xuketong/2.png" alt="">
-                    <h3></h3>
-                </li>
-                <li class="slide7-item"><img src="./1/xuketong/1.png" alt="">
-                    <h3></h3>
-                </li>
+                <li class="slide7-item"><img src="./zhang/章芳颖/1.gif" alt=""><h3></h3></li>
+                <li class="slide7-item"><img src="./zhang/章芳颖/2.jpg" alt=""><h3></h3></li>
+                <li class="slide7-item"><img src="./zhang/章芳颖/4.jpg" alt=""><h3></h3></li>
+                <li class="slide7-item"><img src="./zhang/章芳颖/3.jpg" alt=""><h3></h3></li>
+                <li class="slide7-item"><img src="./zhang/章芳颖/1.jpg" alt=""><h3></h3></li>
             </ul>
         </div>
     </div>
