--- a/test8.html
+++ b/test8.html
@@ -22,12 +22,11 @@
     <div class="manualItem">
         <div class="slide8 list">
             <ul class="slide8">
-                <li class="slide8-item"><img src="./1/chengyan/5.gif" alt=""></li>
-                <li class="slide8-item"><img src="./1/chengyan/4.jpg" alt=""></li>
-                <li class="slide8-item"><img src="./1/chengyan/3.jpg" alt=""></li>
-                <li class="slide8-item"><img src="./1/chengyan/2.jpg" alt=""></li>
-                <li class="slide8-item"><img src="./1/chengyan/1.jpg" alt=""></li>
-                </li>
+                <li class="slide8-item"><img src="./libo/1.gif" alt=""><h3></h3></li>
+                <li class="slide8-item"><img src="./libo/3.jpg" alt=""><h3></h3></li>
+                <li class="slide8-item"><img src="./libo/4.jpg" alt=""><h3></h3></li>
+                <li class="slide8-item"><img src="./libo/2.jpg" alt=""><h3></h3></li>
+                <li class="slide8-item"><img src="./libo/1.jpg" alt=""><h3></h3></li>
             </ul>
         </div>
     </div>
