--- a/test9.html
+++ b/test9.html
@@ -22,21 +22,11 @@
     <div class="manualItem">
         <div class="slide9 list">
             <ul class="slide9">
-                <li class="slide9-item"><img src="./1/zhouke/5.gif" alt="">
-                    <h3></h3>
-                </li>
-                <li class="slide9-item"><img src="./1/zhouke/4.png" alt="">
-                    <h3></h3>
-                </li>
-                <li class="slide9-item"><img src="./1/zhouke/3.png" alt="">
-                    <h3></h3>
-                </li>
-                <li class="slide9-item"><img src="./1/zhouke/2.png" alt="">
-                    <h3></h3>
-                </li>
-                <li class="slide9-item"><img src="./1/zhouke/1.png" alt="">
-                    <h3></h3>
-                </li>
+                <li class="slide9-item"><img src="./zhu/朱俪雯推送/pocket-单人驾驶器/1.gif" alt=""><h3></h3></li>
+                <li class="slide9-item"><img src="./zhu/朱俪雯推送/pocket-单人驾驶器/4.jpg" alt=""><h3></h3></li>
+                <li class="slide9-item"><img src="./zhu/朱俪雯推送/pocket-单人驾驶器/3.jpg" alt=""><h3></h3></li>
+                <li class="slide9-item"><img src="./zhu/朱俪雯推送/pocket-单人驾驶器/2.jpg" alt=""><h3></h3></li>
+                <li class="slide9-item"><img src="./zhu/朱俪雯推送/pocket-单人驾驶器/1.jpg" alt=""><h3></h3></li>
         </div>
     </div>
     
