--- a/test6.html
+++ b/test6.html
@@ -22,21 +22,11 @@
     <div class="manualItem">
         <div class="slide6 list">
             <ul class="slide6">
-                <li class="slide6-item"><img src="./1/qintao/5.gif" alt="">
-                    <h3></h3>
-                </li>
-                <li class="slide6-item"><img src="./1/qintao/4.jpg" alt="">
-                    <h3></h3>
-                </li>
-                <li class="slide6-item"><img src="./1/qintao/3.jpg" alt="">
-                    <h3></h3>
-                </li>
-                <li class="slide6-item"><img src="./1/qintao/2.jpg" alt="">
-                    <h3></h3>
-                </li>
-                <li class="slide6-item"><img src="./1/qintao/1.jpg" alt="">
-                    <h3></h3>
-                </li>
+                <li class="slide6-item"><img src="./zhuzi/1/1.gif" alt=""><h3></h3></li>
+                <li class="slide6-item"><img src="./zhuzi/1/4.jpg" alt=""><h3></h3></li>
+                <li class="slide6-item"><img src="./zhuzi/1/3.jpg" alt=""><h3></h3></li>
+                <li class="slide6-item"><img src="./zhuzi/1/2.jpg" alt=""><h3></h3></li>
+                <li class="slide6-item"><img src="./zhuzi/1/1.jpg" alt=""><h3></h3></li>
             </ul>
         </div>
     </div>
